@@ -1,0 +1,8 @@
+package SDhulb;
+
+import java.nio.file.Path;
+import java.util.ArrayList;
+
+public class Compiler {
+    static void compile(ArrayList<Token<?>> tokens, Path destinationPath) {}
+}
